<resources>
    <string name="app_name">Workout Helper</string>
    <string name="pref_title_language">Language</string>
    <!--  Language_names  -->
    <string-array name="Language_names">
        <item>@string/en</item>
        <item>@string/et</item>
        <item>@string/fi</item>
    </string-array>
    <!--  Language_values  -->
    <string-array name="Language_values">
        <item>en</item>
        <item>et</item>
        <item>fi</item>
    </string-array>

    <string name="en">English (en)</string>
    <string name="et">Estonian (et)</string>
    <string name="fi">Finnish (fi)</string>

    <string name="current_language">English</string>

    <!--  Profile Fragment  -->
    <string name="name">Name</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="height_cm">Height (cm)</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="height_inch">Height (″)</string>
    <string name="weight_pound">Weight (lb)</string>
    <string name="age">Age</string>
    <string name="save">Save</string>
    <string name="btn_edit">Edit</string>

    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="new_exercise">Button for adding a new exercise</string>
    <string name="exercise_placeholder_name">Exercise Name</string>
    <string name="exercise_placeholder_quantity">Exercise Quantity</string>
    <string name="exercise_placeholder_time">Exercise Time</string>
    <string name="edit_exercise">Edit Exercise</string>
    <string name="delete_all_exercises">Delete all exercises!</string>
    <string name="exercise_name_missing">Please enter your exercise name!</string>
    <string name="exercise_values_missing">Please enter either time or quantity!</string>
    <string name="save_db">Exercise plan was added to list!</string>
    <string name="save_err">Failed to save Exercise to list!</string>
    <string name="exercises_deleted">All Exercises were deleted!</string>
    <string name="exercise_deleted">Exercise was deleted</string>
    <string name="exercise_err">Exercise could not be updated</string>
    <string name="exercise_creator_closed">Exercise creator closed</string>
    <string name="updated">Exercise updated</string>
    <string name="severely_skinny">Severely Skinny</string>
    <string name="moderately_skinny">Moderately Skinny</string>
    <string name="mildly_skinny">Mildly Skinny</string>
    <string name="normal">Healthy</string>
    <string name="overweight">Overweight</string>
    <string name="obese_class_I">Obese</string>
    <string name="obese_class_II">Obese+2</string>
    <string name="exercise">Exercise</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="how_many_times">How many times?</string>
    <string name="time">time (seconds)</string>
    <string name="_10_x">10 X</string>
    <string name="_10_sec">10 sec</string>
    <string name="seconds">Seconds</string>
    <string name="timer">Timer</string>
    <string name="quantity_icon">X</string>
    <string name="time_icon">sec</string>
    <string name="change_language">Change language</string>

    <!--  Exercise Fragment  -->
    <string name="done">Done</string>
    <string name="pause">Pause</string>
    <string name="reset_timer">Reset</string>

    <!--  Train Fragment  -->
    <string name="sixpack" translatable="false">sixpack</string>
    <string name="armsandchest" translatable="false">armsandchest</string>
    <string name="custom" translatable="false">custom</string>

    <!-- Preferences -->
    <string name="pref_messages_header">Messages</string>
    <string name="pref_sync_header">Sync</string>
    <string name="pref_signature_title">Your signature</string>
    <string name="pref_reply_title">Default reply action</string>
    <string name="pref_sync_title">Sync email periodically</string>
    <string name="pref_feedback">Report technical issues or suggest new features</string>
    <string name="pref_units">Units</string>
    <string name="pref_units_on">US</string>
    <string name="pref_units_off">Metric</string>
    <string name="pref_BMI_title">BMI units</string>
    <string name="pref_notifications">Enable message notifications</string>
    <string name="pref_notifications_title">Notifications</string>
    <string name="pref_feedback_title">Send feedback</string>

    <string name="pref_clear_ask">Are you sure you want to delete all data?</string>
    <string name="pref_clear_yes">Yes</string>
    <string name="pref_clear_no">No</string>

    <string name="pref_key_theme" translatable="false">theme_night</string>
    <string name="pref_key_units" translatable="false">BMI_units</string>
    <string name="pref_key_language" translatable="false">language</string>
    <string name="pref_key_clear" translatable="false">data_clear</string>

    <string name="pref_theme_title">App Theme</string>
    <string name="pref_clear_title">Delete app data</string>
    <string name="pref_clear">Clear all stored data</string>
    <string name="pref_theme_on">Dark mode On</string>
    <string name="pref_theme_off">Dark mode Off</string>

    <!-- Titles -->
    <string name="title_here">Title here</string>
    <string name="create_exercise">Create Exercise</string>
    <string name="train">Train</string>
    <string name="exercises">Exercises</string>

    <!--  Menu Titles  -->
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_train">Train</string>

    <string name="sixpack_exercises">Six-pack exercises</string>
    <string name="armsandchest_exercises">Arms and Chest exercises</string>
    <string name="custom_exercises">Custom exercises</string>
    <string name="add_custom_exercises">Show exercises</string>

    <!-- UI -->
    <string name="empty">empty</string>
    <string name="edit">Edit</string>
    <string name="start">start</string>
    <string name="skip">Skip</string>
    <string name="cancel">Cancel</string>

    <!--  Other  -->
    <string name="quantity_format">%1$d X</string>
    <string name="BMI_format">BMI: %.1f</string>
    <string name="timer_format">%02d:%02d</string>

    <!-- Result -->
    <string name="ex_session_fail">Exercise Session failed!</string>
    <string name="ex_session_cancel">Exercise Session canceled!</string>
    <string name="break_success">Break over!</string>
    <string name="no_data">Did not get data!</string>
    <string name="break_failed">Break failed!</string>
    <string name="break_canceled">Break cancelled!</string>

    <!-- Warning -->
    <string name="dialog_holdup">Hold up</string>
    <string name="warning_fill_fields">You must fill required fields before using the app!</string>
    <string name="bmi_warning">This app is made for people over the age of 18\nSome results may vary.</string>

    <!-- Error -->
    <string name="err_data_same">Can\'t save already existing data. Make sure at least 1 field is unique</string>
    <string name="err">ERROR</string>
    <string name="err_nfe">NumberFormat Exception: invalid input string</string>
    <string name="err_field_empty">Field cannot be empty!</string>
    <string name="err_name_max">Field cannot contain more than 20 characters!</string>
    <string name="err_name_format">Name not formatted correctly!</string>
    <string name="err_age_max">Too large number!</string>
    <string name="err_height_min">Height cannot be %.1f! min: %.1f</string>
    <string name="err_height_max">Too tall! max: %.1f</string>
    <string name="err_weight_min">Too light! min: %.1f</string>
    <string name="err_weight_max">Too heavy! Max: %.1f</string>
    <string name="err_age_min">Age cannot be %1d! min: 12</string>
    <string name="ex_session_success">Exercise Session successful!</string>
    <string name="err_get_data">Did not get data!</string>
    <string name="err_session_empty">Session empty</string>
    <string name="err_deleteall">Nothing to delete!</string>
    <string name="exercise_too_long">Exercise name cannot contain more than 20 characters!</string>
    <string name="err_incorrect_time_quantity">Exercise time and quantity cannot both be 0!</string>
    <string name="err_field_nfe">Please provide a number between 0 and 2147483647</string>

    <!-- Success -->
    <string name="user_update_success">"Profile updated successfully!</string>
    <string name="user_create_success">User created successfully!</string>

    <string name="x_sec_break">%1d second break!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="ex_session_incomplete">You skipped some exercises!</string>


</resources>
