<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myCoordinatorMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ExerciseFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/exercise"
            android:textSize="60sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtQuantity"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="60sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtName" />

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="60sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtQuantity" />

        <Button
            android:id="@+id/btnDone"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnPauseTime" />

        <Button
            android:id="@+id/btnPauseTime"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/pause"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnDone"
            app:layout_constraintEnd_toStartOf="@+id/btnDone"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnResetTime"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/reset_timer"
            app:layout_constraintBottom_toTopOf="@+id/btnPauseTime"
            app:layout_constraintEnd_toStartOf="@+id/btnDone"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>